[package]
name = "aya_hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
bytes = "1.5.0"
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
network-types = "0.0.5"
tokio = { version = "1.36.0", features = ["full"] }


